[gd_scene load_steps=13 format=3 uid="uid://c4wnumyysruol"]

[ext_resource type="Script" path="res://special_scenes/combat_UI/session_points/PilotStats.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://b8llrhhkcnyfh" path="res://special_scenes/combat_UI/session_points/Headshot.tscn" id="2"]
[ext_resource type="Resource" uid="uid://cmmvbrr51qwj1" path="res://godot4/debug/default_players/p1.tres" id="2_ajx2r"]
[ext_resource type="PackedScene" path="res://special_scenes/combat_UI/session_points/Stat.tscn" id="3"]
[ext_resource type="Script" path="res://special_scenes/combat_UI/session_points/StarsContainer.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://dw8dm4b52y11j" path="res://special_scenes/combat_UI/session_points/Star.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://ccvffra4l23u7" path="res://assets/patterns/stripes_duotone_lighter.png" id="6"]
[ext_resource type="FontFile" uid="uid://cr1ufi8wpbpqp" path="res://assets/fonts/04b_19.ttf" id="8"]

[sub_resource type="Animation" id="1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.8, 0.8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.219608, 0.219608, 0.219608, 0.901961)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WinnerOutline:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="2"]
resource_name = "Victory"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 2),
"transitions": PackedFloat32Array(0.5, -2, -2),
"update": 0,
"values": [Vector2(0.8, 0.8), Vector2(1, 1), Vector2(0.9, 0.9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 2),
"transitions": PackedFloat32Array(0.5, -2, -2),
"update": 0,
"values": [Vector2(0, 0), Vector2(-26, -26), Vector2(-20, -20)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 2),
"transitions": PackedFloat32Array(0.5, -2, -2),
"update": 0,
"values": [Color(0.219608, 0.219608, 0.219608, 0.901961), Color(0.541176, 0.541176, 0.541176, 0.901961), Color(0.34902, 0.34902, 0.34902, 0.901961)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WinnerOutline:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4l6uv"]
_data = {
"RESET": SubResource("1"),
"Victory": SubResource("2")
}

[sub_resource type="FontFile" id="3"]
resource_local_to_scene = true
fallbacks = Array[Font]([ExtResource("8"), ExtResource("8")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="PilotStats" type="Node2D"]
scale = Vector2(0.8, 0.8)
script = ExtResource("1")
player = ExtResource("2_ajx2r")

[node name="Background" type="Polygon2D" parent="."]
unique_name_in_owner = true
color = Color(0.219608, 0.219608, 0.219608, 0.901961)
texture = ExtResource("6")
polygon = PackedVector2Array(12.5, 162.5, 12.5, 12.5, 1062.5, 12.5, 1012.5, 162.5)

[node name="Shadow" type="Polygon2D" parent="."]
color = Color(0, 0, 0, 0.313726)
polygon = PackedVector2Array(6.25, 156.25, 6.25, 6.25, 125, 6.25, 150, 156.25)

[node name="Container" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 100)
anchors_preset = 10
anchor_right = 1.0
offset_right = 1604.0
offset_bottom = 150.0

[node name="Headshot" parent="Container" instance=ExtResource("2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(220, 150)
layout_mode = 2

[node name="StatsContainer" type="GridContainer" parent="Container"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 26
columns = 2

[node name="Stat2" parent="Container/StatsContainer" instance=ExtResource("3")]
layout_mode = 2
key = "kills"
stats_value = "0"

[node name="Stat3" parent="Container/StatsContainer" instance=ExtResource("3")]
layout_mode = 2
key = "deaths"
stats_value = "0"

[node name="Stat4" parent="Container/StatsContainer" instance=ExtResource("3")]
layout_mode = 2
key = "selfkills"
stats_value = "0"

[node name="Stat5" parent="Container/StatsContainer" instance=ExtResource("3")]
layout_mode = 2
key = "bombs"
stats_value = "0"

[node name="StarsContainer" type="HBoxContainer" parent="Container"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4")
star_scene = ExtResource("5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4l6uv")
}

[node name="WinnerOutline" type="Line2D" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
points = PackedVector2Array(43.75, -12.5, 125, -12.5, 156.25, 162.5, -12.5, 162.5, -12.5, -12.5, 43.75, -12.5)
width = 6.0
default_color = Color(1.3, 1.3, 1.3, 1)

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(132.5, 18.75)

[node name="PlayerID" type="Label" parent="Node2D"]
unique_name_in_owner = true
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 25.0
offset_right = 118.0
offset_bottom = 62.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.705882)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 6
theme_override_fonts/font = SubResource("3")
text = "P1"
vertical_alignment = 1
uppercase = true
